# smart-home-2

./: .gitignore  README.md  external.repos.yaml
charger_description/urdf/: charger.urdf.xacro
helper_scripts/: nav2_failure_monitor.sh  sh_startup_script.sh  start_nav.sh
shr_actions_cpp/: CMakeLists.txt
shr_actions_cpp/src/: play_video_client.cpp
shr_actions_py/: setup.py
shr_actions_py/shr_actions_py/: action_display_interface.py  combined.py  localize.py  make_call_action.py  play_audio_action.py  play_video_action_display.py  read_script_action.py  undocking_action.py
shr_docking/: README.md  package.xml  setup.cfg  setup.py
shr_docking/launch/: docking_action_servers.launch.py
shr_docking/scripts/: setup_udev_esp32.sh
shr_docking/shr_docking/: docking_action.py  docking_camera_action.py  docking_camera_main.py  docking_data_manager.py  docking_ir_action.py  docking_ir_main.py  docking_ir_main_old.py
shr_msgs/: CMakeLists.txt
shr_msgs/msg/: WorldState.msg
shr_parameters/: CMakeLists.txt
shr_parameters/params/: shr_parameters copy.yaml  shr_parameters.yaml  shr_parameters_test.yaml
shr_parameters_py/shr_parameters_py/: shr_parameters.py
shr_plan/: CMakeLists.txt  package.xml
shr_plan/launch/: action_servers.launch.py  real_robot.launch.py
shr_plan/pddl/: high_level_domain.pddl  high_level_domain_template.pddl  low_level_domain.pddl  problem_drinking_reminder.pddl  problem_empty_dishwasher_reminder.pddl  (+16 more)
startup_scripts/: handshake.py  kill_ros.py  reposition_display.py  start_nav.sh  startup_planner.sh  stretch_motion_command.py
(+61 files in other folders)
